--- a/scss/abstracts/mixin/_mediaquery.scss
+++ b/scss/abstracts/mixin/_mediaquery.scss
@@ -1,16 +1,14 @@
-@use "../variables" as *;
-
-// 모바일전용 반응형코드
-@mixin mobile() {
+@use "../variable" as *;
+// 모바일 전용 반응형코드
+@mixin mobile {
   @media ($mobileSize > width) {
     @content;
   }
 }
 
-// 타블렛전용 반응형코드
-@mixin tablet() {
+// 타블렛 전용 반응형코드
+@mixin tablet {
   @media ($tabletSize > width > calc($mobileSize + 1)) {
-    // @media ($tabletSize > width) {
     @content;
   }
 }
