--- a/scss/layout/_responsive.scss
+++ b/scss/layout/_responsive.scss
@@ -1,8 +1,10 @@
 @use "../abstracts/" as *;
 
-.only-mobile {
-  display: none;
-  @include mobile {
-    display: block;
+@layer Layout.Responsive {
+  .only-mobile {
+    display: none;
+    @include mobile {
+      display: block;
+    }
   }
 }
