--- a/scss/_layer.scss
+++ b/scss/_layer.scss
@@ -1,1 +1,1 @@
-@layer Reset, CDNFont, Typography, Components, Rounded, Layout;
+@layer Reset, CDNFont, Typography, Components, Rounded, Layout, Popup;
