--- a/scss/abstracts/_index.scss
+++ b/scss/abstracts/_index.scss
@@ -1,3 +1,3 @@
-@forward "./mixin";
-@forward "function";
-@forward "variables";
+@forward "./mixin/";
+@forward "./function";
+@forward "./variable";
