--- a/scss/abstracts/mixin/_bar.scss
+++ b/scss/abstracts/mixin/_bar.scss
@@ -16,17 +16,12 @@
 
         @if $method == "line" or $method == "l" {
           background-color: $bg;
-        } @else if $method == "bg" or $method == "img" or $method == "image" {
+        } @else if $method == "bg" or $method == "img" {
           @include background($bg);
         } @else {
-          @error "방식(line or bg) > 가로 > 세로 > 배경 > 여백순서로 넣어주세요.";
+          @error "방식(line, bg) > 가로 > 세로 > 배경 > 여백순서로 넣어주세요";
         }
-        // 조건에 line이 들어오면 | background-color로 받고
-        // bg 이미지로 받으면 background로 받겠다
       }
     }
   }
 }
-//  > * {
-//    + * {
-// 은 자식 요소의 인접한 형제 요소를 선택
