--- a/scss/components/_bar.scss
+++ b/scss/components/_bar.scss
@@ -1,4 +1,28 @@
 @use "../abstracts/" as *;
 
 @layer Components.Bar {
+  @mixin bar($method, $width, $height, $bg, $gap) {
+    display: flex;
+    align-items: center;
+    > * {
+      + * {
+        display: flex;
+        align-items: center;
+        &::before {
+          content: "";
+          width: rem($width);
+          height: rem($height);
+          margin-inline: rem($gap);
+
+          @if $method == "line" or $method == "l" {
+            background-color: $bg;
+          } @else if $method == "bg" or $method == "img" {
+            @include background($bg);
+          } @else {
+            @error "방식(line, bg) > 가로 > 세로 > 배경 > 여백순서로 넣어주세요";
+          }
+        }
+      }
+    }
+  }
 }
