--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -5,7 +5,6 @@
 $buttonSize: (
   1: (
     "className": ".base",
-    // "className": base,
     "height": 40,
     "fontSize": 16,
     "paddingInline": 25,
@@ -13,7 +12,6 @@ $buttonSize: (
     "fontWeight": null,
   ),
 );
-
 // 버튼 색상 정의
 $buttonColor: (
   1: (
@@ -23,7 +21,6 @@ $buttonColor: (
     "borderColor": #000,
   ),
 );
-
 // 버튼 아이콘 정의
 $buttonIcon: (
   1: (
@@ -46,12 +43,15 @@ $buttonIcon: (
       width: 100%;
     }
 
+    // 리스트형 변수(배열)의 갯수에 따라 파악하는 length 함수를 추가
     @for $idx from 1 through list.length($buttonSize) {
       @include buttonSize($buttonSize, $idx);
     }
+
     @for $index from 1 through list.length($buttonColor) {
       @include buttonColor($buttonColor, $index);
     }
+
     @for $index from 1 through list.length($buttonIcon) {
       @include buttonIcon($buttonIcon, $index);
     }
