--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -1,6 +1,7 @@
-@use "sass:list";
 @use "../abstracts/" as *;
+@use "sass:list";
 
+// 폼요소 공통 디자인 정의
 $formSettings: (
   "height": rem(40),
   "border": rem(1) solid #000,
@@ -10,41 +11,19 @@ $formSettings: (
   "fontColor": #000,
   "fontSize": rem(14),
   "lineHeight": 1,
-  "letterSpacing": rem(-0.5),
+  "letterSapcing": rem(-0.5),
   "placeholderColor": #000,
   "disabledBgColor": rgba(#000, 0.1),
   "readonlyBgColor": rgba(#000, 0.05),
 );
-
-%form {
-  height: map-get($formSettings, height);
-  border: map-get($formSettings, border);
-  box-sizing: border-box;
-  border-radius: map-get($formSettings, borderRadius);
-  background-color: map-get($formSettings, bgColor);
-  padding-inline: map-get($formSettings, paddingInline);
-  color: map-get($formSettings, fontColor);
-  font-size: map-get($formSettings, fontSize);
-  line-height: map-get($formSettings, lineHeight);
-  letter-spacing: map-get($formSettings, letterSpacing);
-  &::placeholder {
-    color: #000;
-  }
-  &:disabled {
-    background: rgba(#000, 0.1);
-  }
-  &[readonly] {
-    background: rgba(#000, 0.05);
-  }
-}
-
-$selectSettings: (
+// Select 디자인 정의
+$selectSetting: (
   "bgUrl": "bg_select.svg",
   "iconPosition": rem(12),
   "bgWidth": 6,
   "paddingInline": 12,
 );
-
+// Radio, checkbox 디자인 정의
 $radioCheckSetting: (
   1: (
     "className": ".radio-type1",
@@ -55,18 +34,41 @@ $radioCheckSetting: (
   ),
 );
 
+%label {
+  display: inline-flex;
+  gap: rem(4);
+  align-items: center;
+  color: #000;
+  font-size: rem(12);
+  line-height: 100%;
+  letter-spacing: rem(-0.5);
+}
+%form {
+  height: map-get($formSettings, height);
+  border: map-get($formSettings, border);
+  box-sizing: border-box;
+  border-radius: map-get($formSettings, borderRadius);
+  background-color: map-get($formSettings, bgColor);
+  padding-inline: map-get($formSettings, paddingInline);
+  color: map-get($formSettings, fontColor);
+  font-size: map-get($formSettings, fontSize);
+  line-height: map-get($formSettings, lineHeight);
+  letter-spacing: map-get($formSettings, letterSapcing);
+  &::placeholder {
+    color: map-get($formSettings, placeholderColor);
+  }
+  &:disabled {
+    background: map-get($formSettings, disabledBgColor);
+  }
+  &[readonly] {
+    background: map-get($formSettings, readonlyBgColor);
+  }
+}
+
 @layer Components.Form {
   .input {
     @extend %form;
-    width: var(--w, 100%);
-  }
-
-  .select {
-    $result: map-get($selectSettings, paddingInline) * 2 + map-get($selectSettings, bgWidth);
-    @extend %form;
-    @include background(map-get($selectSettings, bgUrl), right map-get($selectSettings, iconPosition) center);
-    padding-right: rem($result);
-    appearance: none;
+    width: 2.4rem;
     width: var(--w, 100%);
   }
 
@@ -77,24 +79,27 @@ $radioCheckSetting: (
     padding-block: rem(15);
     &::placeholder {
       color: #000;
-      font-size: rem(12);
       font-family: "Noto Sans KR";
-      line-height: rem(12);
+      font-size: rem(12);
+      line-height: 1; /* 1.4rem */
       letter-spacing: rem(-0.5);
     }
   }
 
-  %label {
-    display: inline-flex;
-    gap: 4px;
-    align-items: center;
-    color: #000;
-    font-size: rem(12);
-    line-height: 1;
-    letter-spacing: rem(-0.5);
+  .select {
+    $result: map-get($selectSetting, paddingInline) * 2 + map-get($selectSetting, bgWidth);
+    @extend %form;
+    @include background(
+      map-get($selectSetting, bgUrl),
+      right map-get($selectSetting, iconPosition) center
+    );
+    padding-right: rem($result);
+    appearance: none;
+    width: var(--w, 100%);
   }
+}
 
-  @for $idx from 1 through list.length($radioCheckSetting) {
-    @include RadioCheckbox($radioCheckSetting, $idx);
-  }
+// 리펙토링 후
+@for $idx from 1 through list.length($radioCheckSetting) {
+  @include RadioCheckbox($radioCheckSetting, $idx);
 }
