--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -1,7 +1,6 @@
 @use "../abstracts/" as *;
 
-@import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap")
-layer(CDNFont);
+@import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap") layer(CDNFont);
 
 @layer Typography {
   html {
