상단 바 네가지 타입 작업

--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -26,9 +26,16 @@ $buttonIcon: (
   1: (
     "className": ".ico1",
     "direction": after,
-    "imgName": "ico_book.svg",
-    "width": 16,
-    "height": 16,
+    "imgName": "ico_close.svg",
+    "width": 12,
+    "height": 12,
+  ),
+  2: (
+    "className": ".ico2",
+    "direction": after,
+    "imgName": "ico_close_white.png",
+    "width": 12,
+    "height": 12,
   ),
 );
 
