--- a/scss/components/_notification.scss
+++ b/scss/components/_notification.scss
@@ -81,6 +81,8 @@ $notificationLinkArrow: (
     align-items: center;
     padding-inline: rem(16);
     height: rem(40);
+    font-family: Inter;
+
     &.fullszie {
       width: 100%;
     }
