--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -3,5 +3,155 @@
 
 @layer Layout.Footer {
   .footer {
+    display: flex;
+    padding: rem(80) rem(160) rem(32) rem(160);
+    background: #141718;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: rem(49);
+
+    @include mobile {
+      padding: rem(48) rem(32);
+      gap: rem(40);
+    }
+
+    &__top {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 100%;
+      @include mobile {
+        flex-direction: column;
+        gap: rem(40);
+      }
+      p {
+        color: #e8ecef;
+        font-family: Inter;
+        font-size: rem(14);
+        font-weight: 400;
+        line-height: rem(22);
+      }
+    }
+    &__info {
+      display: flex;
+      align-items: center;
+      @include mobile {
+        flex-direction: column;
+      }
+    }
+
+    &__logo {
+      @include mobile {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: rem(16);
+      }
+
+      &::after {
+        content: "";
+        display: inline-block;
+        width: rem(1);
+        height: rem(24);
+        margin-inline: rem(32);
+        background-color: #6c7275;
+        @include mobile {
+          transform: rotate(90deg);
+          margin-inline: 0;
+          margin-bottom: rem(16);
+        }
+      }
+      > a {
+        color: #fff;
+        font-family: Poppins;
+        font-size: rem(24);
+        font-weight: 500;
+        line-height: rem(24);
+        text-align: center;
+      }
+    }
+    &__menu {
+      > ul {
+        display: flex;
+        align-items: flex-start;
+        gap: rem(40);
+        @include mobile {
+          flex-direction: column;
+          align-items: center;
+          gap: rem(32);
+        }
+        > li {
+          > a {
+            font-family: Inter;
+            color: #fefefe;
+            font-size: rem(14);
+            line-height: rem(22);
+            @include mobile {
+              text-align: center;
+            }
+          }
+        }
+      }
+    }
+    &__bottom {
+      display: grid;
+      grid-template-columns: 1fr min-content;
+      align-items: center;
+      width: 100%;
+      padding-block: rem(16);
+      border-top: rem(0.5) solid #6c7275;
+      @include mobile {
+        grid-template-columns: 1fr;
+        gap: rem(32);
+        padding-block: rem(24);
+      }
+    }
+    &__copy {
+      @include mobile {
+        justify-self: center;
+        order: 2;
+      }
+      display: flex;
+      align-items: center;
+      gap: rem(28);
+      @include mobile {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        align-items: center;
+      }
+      p {
+        color: var(--neutral-03100, #e8ecef);
+        font-size: 1.2rem;
+        font-style: normal;
+        line-height: 2rem;
+        text-align: center;
+
+        &:nth-of-type(1) {
+          @include mobile {
+            order: 3;
+            grid-column: 1/ 3;
+          }
+        }
+      }
+      p ~ p {
+        color: var(--neutral-01100, #fefefe);
+        font-family: Poppins;
+        font-size: 1.2rem;
+        font-weight: 600;
+        line-height: 2rem;
+      }
+    }
+    &__sns {
+      @include mobile {
+        justify-self: center;
+        order: 1;
+      }
+      > ul {
+        display: flex;
+        align-items: center;
+        gap: rem(24);
+      }
+    }
   }
 }
